# stock-research

./: .gitignore  LICENSE  credentials.json  custom.txt  pyproject.toml  step_i.py  step_ii.py  step_iii.py  step_iv_creator.py  token.json  utilities.py
.github/workflows/: nightly_run.yml
files/0019.HK/: 0019.HK_qa.md
files/003550.KS/: 003550.KS_qa.md
files/005830.KS/: 005830.KS_qa.md
files/0116.HK/: 0116.HK_qa.md
files/028260.KS/: 028260.KS_qa.md
files/086790.KS/: 086790.KS_qa.md
files/145720.KS/: 145720.KS_qa.md
files/1979.T/: 1979.T_qa.md
files/2531.T/: 2531.T_qa.md
files/271560.KS/: 271560.KS_qa.md
files/383800.KS/: 383800.KS_fv.md  383800.KS_qa.md
files/4182.T/: 4182.T_qa.md
files/4368.T/: 4368.T_qa.md
files/4401.T/: 4401.T_qa.md
files/5122.T/: 5122.T_qa.md
files/6250.T/: 6250.T_qa.md
files/6277.T/: 6277.T_qa.md
files/6465.T/: 6465.T_qa.md
files/7095.T/: 7095.T_qa.md
files/7716.T/: 7716.T_qa.md
files/7839.T/: 7839.T_qa.md
files/7988.T/: 7988.T_qa.md
files/9715.T/: 9715.T_qa.md
files/AALBF/: AALBF_fv.md  AALBF_qa.md
files/AAM/: AAM_qa.md
files/AAON/: AAON_qa.md
files/AAP/: AAP_qa.md
files/AAPL/: AAPL_fv.md  AAPL_qa.md
files/AARD/: AARD_qa.md
files/ABCB/: ABCB_qa.md
files/ABCL/: ABCL_qa.md
files/ABEPF/: ABEPF_qa.md
files/ABG/: ABG_qa.md
files/ABM/: ABM_qa.md
files/ABNB/: ABNB_qa.md
files/ABP/: ABP_qa.md
files/ABR/: ABR_qa.md
files/ABSI/: ABSI_qa.md
files/ACCO/: ACCO_fv.md  ACCO_qa.md
files/ACDC/: ACDC_qa.md
files/ACGL/: ACGL_qa.md
files/ACHC/: ACHC_qa.md
files/ACHV/: ACHV_qa.md
files/ACI/: ACI_qa.md
files/ACIC/: ACIC_qa.md
files/ACLS/: ACLS_qa.md
files/ACN/: ACN_qa.md
files/ACOG/: ACOG_qa.md
files/ACON/: ACON_qa.md
files/ACR/: ACR_qa.md
files/ACRS/: ACRS_qa.md
files/ACT/: ACT_qa.md
files/ACTG/: ACTG_qa.md
files/AD/: AD_qa.md
files/ADBE/: ADBE_qa.md
(+1764 files in other folders)
