[project]
name = "stock-research"
version = "0.1.0"
description = "pipeline for good ideas"
authors = [
    {name = "Prateek Malhotra",email = "prateekdbst@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "praw (>=7.8.1,<8.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "google-genai (>=1.38.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "gspread (>=6.2.1,<7.0.0)",
    "google-api-python-client (>=2.183.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "pygithub (>=2.8.1,<3.0.0)",
    "transformers (>=4.56.2,<5.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "cloudscraper (>=1.2.71,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
